--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             border-radius: 50%;
             margin: 0 auto;
             border: 4px solid #fff;
-            background-image: url('IMG_6535.jpg');
+            background-image: url('../images/IMG_6535.jpg');
             background-size: cover;
             background-position: center;
         }
