--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         .container {
-            max-width: 1000px;
+            max-width: 77%;
             margin: 30px auto;
             background-color: #fff;
             box-shadow: 0 0 20px rgba(0,0,0,0.15);
@@ -30,7 +30,7 @@
             background-color: #f2f2f2;
         }
         .right-column {
-            width: 65%;
+            width: 75%;
             padding: 30px;
         }
         .photo-container {
@@ -38,13 +38,13 @@
             margin-bottom: 25px;
         }
         .photo {
-            width: 180px;
-            height: 180px;
+            width: 170px;
+            height: 170px;
             background-color: #ccc;
             border-radius: 50%;
             margin: 0 auto;
             border: 4px solid #fff;
-            background-image: url('https://raw.githubusercontent.com/cesargomezs/Resumen/refs/heads/dev/resumen/images/IMG_6535.jpg');
+            background-image: url('IMG_6535.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -80,7 +80,7 @@
             margin-bottom: 25px;
         }
         .contact-info p {
-            margin: 5px 0;
+            margin: 3px 0;
             word-wrap: break-word;
         }
         .contact-info a {
