--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Cesar Gomez</title>
+    <title>Resumen - Cesar Gomez</title>
     <style>
         body {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -14,7 +14,7 @@
             color: #333;
         }
         .container {
-            max-width: 77%;
+            max-width: 90%;
             margin: 30px auto;
             background-color: #fff;
             box-shadow: 0 0 20px rgba(0,0,0,0.15);
