--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <p><strong>Email:</strong><br><a href="mailto:cesargomez853@gmail.com">cesargomez853@gmail.com</a></p>
                     <p><strong>LinkedIn:</strong><br><a href="https://www.linkedin.com/in/cesar-gomez-13782848" target="_blank">linkedin.com/in/cesar-gomez</a></p>
                     <p><strong>GitHub:</strong><br><a href="https://github.com/cesargomezs" target="_blank">github.com/cesargomezs</a></p>
-					<p><strong>Porfolio:</strong><br><a href="https://cesargomezs.github.io/SamplesDev/" target="_blank">SamplesDev</a></p>
+					<p><strong>GitPages:</strong><br><a href="https://cesargomezs.github.io/SamplesDev/" target="_blank">SamplesDev</a></p>
                 </div>
 
                 <div class="section">
