--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 
                 <div class="section skills-list">
                     <h3>TECHNICAL SKILLS</h3>
+
 					<p><strong>Databases:</strong>
 					Oracle, SQL Server, MySQL , MongoDB,PostgreSQL.</p>
 					<p><strong>Full Stack Web Development:</strong>
@@ -203,25 +204,46 @@
 
                 <div class="section">
                     <h3>PROFESSIONAL SUMMARY</h3>
-                    <p>
-                       Results-driven Senior Full Stack Software Engineer and Application Architect with over 14 years of experience leading the full software development lifecycle (SDLC). Skilled at translating complex business requirements into scalable, cost-effective, and high-performance technical solutions. Proficient in cross-platform development (Web and Android), database architecture and optimization, and cloud integration using Microsoft Azure. Strong advocate of clean code and SOLID principles, with a proven record of driving project success, innovation, and technical leadership within agile teams.
+					<p>
+					<strong>Application Architect & Technical Leader</strong>
 					</p>
+					<p>
+					Results-driven Application Architect and Technical Leader with over 14 years of experience leading and optimizing the full Software Development Life Cycle (SDLC) in enterprise environments. Recognized for the ability to translate business vision into cost-effective, scalable, and robust technical architectures that drive organizational success.
+					</p>
+					<p><strong>Focus & Leadership</strong></p>
+					<p>
+					<strong>Solution Leadership:</strong>
+					Expert in defining, designing, and optimizing Full Stack architectures (Web and Android) to ensure technology effectively supports corporate growth and operational efficiency.
+					</p>
+					<p>
+					<strong>Quality Management:</strong>
+					Strong advocate and mentor of best engineering practices, including SOLID principles and clean code methodologies. Proven record of elevating technical standards and promoting excellence within Agile teams.
+					</p>
+					<p>
+					<strong>Cloud & Data Strategy:</strong>
+					Extensive experience integrating and optimizing services in Microsoft Azure, as well as designing SQL and Oracle database architectures focused on high performance, scalability, and system availability.
+					</p>
+					<p>
+					<strong>Core Strengths</strong>
+					</p>
+					<p>
+					Full Stack Expertise:
+					Skilled in both frontend (UI/UX, mobile/web) and backend (business logic, databases) development.
 
-					<p><strong>Full Stack Experience</strong></p>
-					<p>
-						Ability to work across both frontend (UI/UX, mobile/web) and backend (business logic, databases).
+					Architectural Vision:
+					Adept at designing scalable, maintainable, and secure systems aligned with long-term business goals.
+
+					DevOps & Cloud:
+					Hands-on experience implementing and managing cloud services in Azure (IaaS, PaaS, Serverless) environments.
+
+					Analytical Problem Solving:
+					Strong analytical mindset with expertise in root cause analysis (RCA) and resolution of complex technical challenges.
 					</p>
-					<p><strong>Architectural Thinking</strong></p>
 					<p>
-						Capability to design scalable, maintainable, and secure systems (not just coding).
+					<strong>Career Objective</strong>
 					</p>
-					<p><strong>DevOps and Cloud</strong></p>
 					<p>
-						Hands-on experience implementing and managing services on Azure (IaaS, PaaS, Serverless, etc.).
-					</p>
-					<p><strong>Problem Solving</strong></p>
-					<p>
-						Strong analytical skills for root cause analysis and resolution of complex issues.
+					Seeking a role to apply my architectural and leadership expertise to make strategic technology decisions, foster innovation, and guide teams toward project success through technical mentorship and continuous improvement.
 					</p>
 				</div>
 
